[package]
name = "wontun"
version = "0.1.0"
edition = "2021"

[dependencies]
tun-tap = "0.1.4"
etherparse = "0.13.0"
nix = { version = "0.27.1", features = ["socket", "event"] }
parking_lot = "0.12.1"
socket2 = "0.5.5"
clap = { version = "^4.4.8", features = ["derive"] }

[[bin]]
name = "wontun"
path = "src/wontun.rs"
