[package]
name = "wontun"
version = "0.1.0"
edition = "2021"

[dependencies]
tun-tap = "0.1.4"
etherparse = "0.13.0"
nix = { version = "0.27.1", features = ["socket", "event"] }
parking_lot = "0.12.1"
socket2 = "0.5.5"
clap = { version = "^4.4.8", features = ["derive"] }
ip_network = "0.4.1"
ip_network_table = "0.2.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_ini = { git = "https://github.com/arcnmx/serde-ini.git", rev = "eb9d637" }
thiserror = "1.0.50"

[[bin]]
name = "wontun"
path = "src/wontun.rs"
